--- a/StyleOSebe.css
+++ b/StyleOSebe.css
@@ -107,6 +107,9 @@ body
 @keyframes nav {
     from{margin-top:-10vw;}
 }
+@keyframes color {
+    from{color:#1D0F0F;}
+}
 .Nav_Item1:active,
 .Nav_Item2:active
 {
@@ -134,6 +137,7 @@ footer>ul
 }
 .greeting
 {
+    animation:color 4s;
     font-size: 4vw;
     padding-top:25vw;
     width:10%;
@@ -142,6 +146,7 @@ footer>ul
 }
 .Name
 {
+    animation:color 4s;
     font-size: 4vw;
     color: white;
     width:30%;
@@ -152,6 +157,7 @@ footer>ul
 }
 .Dream
 {
+    animation:color 4s;
     color:white;
     font-size: 4vw;
     width:50%;
@@ -161,6 +167,7 @@ footer>ul
 }
 .Age
 {
+    animation:color 4s;
     font-size :4vw;
     color: white;
     text-align: center;
@@ -170,6 +177,7 @@ footer>ul
 }
 .Will
 {
+    animation:color 4s;
     font-size:4vw;
     color:white;
     text-align: center;
